Fixing background color issue on mobile (Safari)

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,12 @@
   }
 }
 
-html,
+html {
+  height: 100%;
+  background-color: #0a0a1a;
+  min-height: 100dvh;
+}
+
 body {
   height: 100%;
   background: transparent;
